# gastimeter

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.allstar/: allstar.yaml  binary_artifacts.yaml  branch_protection.yaml  outside.yaml  security.md
.github/: CODEOWNERS  dependabot.yml  security-insights.yaml
.github/linters/: pylintrc
.github/workflows/: linter.yaml  publish-to-pypi.yml  reuse.yml  scorecard.yml  tests.yml
.reuse/: dep5
LICENSES/: MIT.txt
src/: __init__.py  analyzer.py  configator.py  error.py  imagegrabber.py  responseparser.py
src/cli/: cli.py
src/gastimeter/: __init__.py  analyzer.py  configator.py  error.py  imagegrabber.py  preprocessor.py  responseparser.py
src/gastimeter/cli/: cli.py
tests/: unit-tests.txt  unit_tests.py
tests/testdata/: test-response.json
