[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gastimeter"
version = "0.2.0"
requires-python = ">= 3.8"
authors = [
    {name = "Georg Kunz", email = "der.schorsch@gmail.com"},
]
description = "Extract text from an image using Azure Cognitive Services."
dependencies = [
  "opencv-python"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[project.urls]
Homepage = "https://github.com/gkunz/gastimeter"

[project.scripts]
gastimeter = "gastimeter.cli.cli:main"
