#
# SPDX-FileCopyrightText: 2024 Georg Kunz <der.schorsch@gmail.com>
# SPDX-License-Identifier: MIT
#

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gastimeter"
dynamic = ["version"]
requires-python = ">= 3.8"
authors = [
    {name = "Georg Kunz", email = "der.schorsch@gmail.com"},
]
description = "Extract text from an image using Azure Cognitive Services."
readme = "README.md"
dependencies = [
  "opencv-python == 4.12.0.88",
  "numpy < 3.0.0"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[project.urls]
Homepage = "https://github.com/gkunz/gastimeter"

[project.scripts]
gastimeter = "gastimeter.cli.cli:main"

[tool.setuptools.dynamic]
version = {attr = "gastimeter.__version__"}
